Add custom view with canvas drawing

--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/imageview"
+    <net.fhtagn.libsegdemo.MatterView
+        android:id="@+id/matterview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
